Fixed bug in stone2 theme with image overlap on footer

--- a/themes/stone2/style.css
+++ b/themes/stone2/style.css
@@ -1034,6 +1034,7 @@ hr.footer-section-divider {
 }
 
 #page-container > footer {
+    clear: both;
 	border-top: 1px solid #777;
 	color: #555;
 	margin-top: 0px;
